<resources>
    <string name="app_name">ColorPalette</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="red">Red</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>
    <string name="generate">Generate</string>
    <string name="save">Save</string>
    <string name="new_color_created">\"New color created: %s\"</string>
    <string name="edit_color">Edit color</string>
</resources>